fix jump animation

--- a/style.css
+++ b/style.css
@@ -35,21 +35,15 @@
 }
 
 .jump {
-    animation: jump 1s linear
+    animation: jump 0.6s linear
 }
 
 @keyframes jump {
     0% {
         top: 150px;
     }
-    30% {
-        top: 130px;
-    }
     50% {
         top: 80px;
-    }
-    80% {
-        top: 130px;
     }
     100% {
         top: 150px;
